--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,6 +261,11 @@ h1, .h1 {
     font-size: 2.5rem;
   }
 }
+@media (max-width: 700px) {
+  #invi {
+    visibility: hidden;
+  }
+}
 
 h2, .h2 {
   font-size: calc(1.325rem + 0.9vw);
